# ServerSceneLoader

./: README.md
src/: CMakeLists.txt
src/SDLmain/: CMakeLists.txt
src/core/: CMakeLists.txt  diffgeom.cpp  error.cpp  quaternion.cpp  shape.cpp  shape.h  transform.cpp
src/sceneloader/: CMakeLists.txt  main.cpp  scene.cpp  scene.h  scene_loader.cpp  scene_loader.h
src/shapes/: CMakeLists.txt  trianglemesh.cpp  trianglemesh.h
src/utils/: CMakeLists.txt  tiny_obj_loader.cc
